Adding registry section

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 											<li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i> Our story</a></li>
 											<li><a href="#"><i class="fa fa-glass" aria-hidden="true"></i> Ceremony details</a></li>
 											<li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i> Map</a></li>
-											<li><a href="#"><i class="fa fa-gift" aria-hidden="true"></i> Gift registration</a></li>
+											<li><a href="#"><i class="fa fa-gift" aria-hidden="true"></i> Gift registry</a></li>
                       <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a></li>
 										</ul>
 									</div>
@@ -299,6 +299,7 @@
 								<h2>Ceremony details</h2>
 								<p><img src="images/ceremony-details.svg" alt="Friday, August 26, 2016 - 6 o'clock" class="ceremony-details" /></p>
 							</header>
+							<!--
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>Arcu accumsan</h3>
@@ -309,6 +310,7 @@
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 							</ul>
+							-->
 						</div>
 					</section>
 
@@ -317,15 +319,15 @@
 					</section>
 
 				<!-- Registry -->
-					<section id="cta" class="wrapper style4">
+					<section id="registry" class="wrapper style4 registry">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Gift registry</h2>
+								<p>We are registered at Crate&Barrel and HoneyFund</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="#" class="button fit special">Crate & Barrel</a></li>
+								<li><a href="#" class="button fit">Honeyfund</a></li>
 							</ul>
 						</div>
 					</section>
@@ -340,7 +342,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Kenriko.com</li><li>Design: Kenneth Ishikawa</a></li>
 						</ul>
 					</footer>
 
