Adding links to menu. Adding links to gift registry page.

--- a/home.html
+++ b/home.html
@@ -32,12 +32,12 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-											<li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i> Our story</a></li>
-											<li><a href="#"><i class="fa fa-glass" aria-hidden="true"></i> Ceremony details</a></li>
-											<li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i> Map</a></li>
-											<li><a href="#"><i class="fa fa-gift" aria-hidden="true"></i> Gift registry</a></li>
-                      <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a></li>
+											<li><a href="#banner"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+											<li><a href="#our-story"><i class="fa fa-heart" aria-hidden="true"></i> Our story</a></li>
+											<li><a href="#ceremony-details"><i class="fa fa-glass" aria-hidden="true"></i> Ceremony details</a></li>
+											<li><a href="#googleMap"><i class="fa fa-map-marker" aria-hidden="true"></i> Map</a></li>
+											<li><a href="#registry"><i class="fa fa-gift" aria-hidden="true"></i> Gift registry</a></li>
+                      <li><a href="mailto:aseilie@alumni.nd.edu"><i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a></li>
 										</ul>
 									</div>
 								</li>
@@ -66,7 +66,7 @@
 					-->
 
 				<!-- Our story -->
-					<section id="one" class="wrapper special our-story">
+					<section id="our-story" class="wrapper special our-story">
 						<div class="inner">
 							<header class="major">
 
@@ -293,7 +293,7 @@
 					</section>
 
 				<!-- Ceremony -->
-					<section id="three" class="wrapper style3 special ceremony">
+					<section id="ceremony-details" class="wrapper style3 special ceremony">
 						<div class="inner">
 							<header class="major">
 								<h2>Ceremony details</h2>
@@ -326,8 +326,8 @@
 								<p>We are registered at Crate&Barrel and HoneyFund</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Crate & Barrel</a></li>
-								<li><a href="#" class="button fit">Honeyfund</a></li>
+								<li><a href="http://www.crateandbarrel.com/gift-registry/?a=784&campaignid=356254376&adgroupid=23836919576&targetid=kwd-765048602&adpos=1t1&creative=98824178216&device=c&matchtype=p&network=g" class="button fit special" target="_blank">Crate & Barrel</a></li>
+								<li><a href="http://www.honeyfund.com/GiveAGift" class="button fit" target="_blank">Honeyfund</a></li>
 							</ul>
 						</div>
 					</section>
