Adding Honeyfund link to website

--- a/home.html
+++ b/home.html
@@ -327,7 +327,7 @@
 							</header>
 							<ul class="actions vertical">
 								<li><a href="http://www.crateandbarrel.com/gift-registry/?a=784&campaignid=356254376&adgroupid=23836919576&targetid=kwd-765048602&adpos=1t1&creative=98824178216&device=c&matchtype=p&network=g" class="button fit special" target="_blank">Crate & Barrel</a></li>
-								<li><a href="http://www.honeyfund.com/GiveAGift" class="button fit special" target="_blank">Honeyfund</a></li>
+								<li><a href="http://www.honeyfund.com/wedding/kenriko" class="button fit special" target="_blank">Honeyfund</a></li>
 							</ul>
 						</div>
 					</section>
