Adding correct link for crate and barrel.

--- a/home.html
+++ b/home.html
@@ -326,7 +326,7 @@
 								<p>We are registered at Crate&Barrel and HoneyFund</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="http://www.crateandbarrel.com/gift-registry/?a=784&campaignid=356254376&adgroupid=23836919576&targetid=kwd-765048602&adpos=1t1&creative=98824178216&device=c&matchtype=p&network=g" class="button fit special" target="_blank">Crate & Barrel</a></li>
+								<li><a href="http://www.crateandbarrel.com/gift-registry/annette-seilie-and-kenneth-ishikawa/r5541922" class="button fit special" target="_blank">Crate & Barrel</a></li>
 								<li><a href="http://www.honeyfund.com/wedding/kenriko" class="button fit special" target="_blank">Honeyfund</a></li>
 							</ul>
 						</div>
@@ -334,6 +334,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<!--
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -341,6 +342,7 @@
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
+						-->
 						<ul class="copyright">
 							<li>&copy; Kenriko.com</li><li>Design: Kenneth Ishikawa</a></li>
 						</ul>
