Commenting out preloader for now.

--- a/home.html
+++ b/home.html
@@ -14,12 +14,12 @@
 	</head>
 	<body class="landing">
 
-		<!-- Preloader -->
+		<!-- Preloader
 		<div class="loader-container">
 			<div class="load-animation"></div>
 			<div class="loader"></div>
 		</div>
-
+ 		-->
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
