Fixing end script tag and incomplete a tag

--- a/home.html
+++ b/home.html
@@ -319,7 +319,7 @@
 						<div class="inner">
 							<header>
 								<h2>Gift registry</h2>
-								<p>We are registered at Crate&Barrel and HoneyFund</p>
+								<p>We are registered at Crate&amp;Barrel and HoneyFund</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="http://www.crateandbarrel.com/gift-registry/annette-seilie-and-kenneth-ishikawa/r5541922" class="button fit special" target="_blank">Crate & Barrel</a></li>
@@ -344,7 +344,7 @@
 						</ul>
 						-->
 						<ul class="copyright">
-							<li>&copy; Kenriko.com</li><li>Design: Kenneth Ishikawa</a></li>
+							<li>Copyright &copy; 2016 Kenriko.com</li>
 						</ul>
 					</footer>
 
@@ -362,6 +362,5 @@
 			<!--<script src="assets/js/jquery.lazyload.js"></script>-->
 			<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
 			<script src="assets/js/main.js"></script>
-    </script>
 	</body>
 </html>
