--- a/home.html
+++ b/home.html
@@ -48,9 +48,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<p><img src="images/puffin.svg" alt="Puffin" class="puffin"><br /><img src="images/title-underline.svg" alt="Title underline" class="title-underline"></p>
+							<p><img src="images/puffin.svg" alt="Puffin" class="puffin" /><br /><object data="images/title-underline.svg" type="image/svg+xml" class="title-underline"><img src="images/title-underline.png" /></object></p>
 							<h2>Mariko &amp; Kenneth</h2>
-							<p>INVITE YOU TO THERE WEDDING CELEBRATION</p>
+							<p>INVITE YOU TO THEIR WEDDING CELEBRATION</p>
 							<p>AUGUST 26, 2016 | ISSAQUAH, WA</p>
 						</div>
 						<!--<a href="#one" class="more scrolly">Learn More</a>-->
