Reordering script tags for google maps

--- a/home.html
+++ b/home.html
@@ -360,7 +360,9 @@
 			<script src="assets/js/modernizr.js"></script>
 			<script src="assets/js/jquery.chocolat.js"></script>
 			<!--<script src="assets/js/jquery.lazyload.js"></script>-->
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJMcS_bzPH77ZotKV96kz6zC5287g72qI&callback=initMap" async defer></script>
 			<script src="assets/js/main.js"></script>
+
+			<!-- Google maps is initialized in main.js -->
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJMcS_bzPH77ZotKV96kz6zC5287g72qI&callback=initMap" async defer></script>
 	</body>
 </html>
