--- a/home.html
+++ b/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
 		<title>Mariko and Kenneth are getting married</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="'Choose a seat not a side. We’re all family once the knot is tied.' - Your invited to Kenneth and Mariko's wedding. Here you will find all of the information necessary for our wedding. if you have any qeustions regarding the cermony, please feel free to contact us via email or in person.">
+		<meta property="og:image" content="website-preview.jpg">
 		<link rel="shortcut icon" href="favicon.ico">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/chocolat.css" />
