Adding more ceremony details to website. Also updated text for the timeline and the registry section.

--- a/home.html
+++ b/home.html
@@ -75,12 +75,13 @@
 
 								<!-- Timeline -->
 								<div id="cd-timeline">
+
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>PSP &amp; coffee dates</h2>
+											<h2>From work to cafe runs</h2>
 											<span class="cd-date">Aug 24, 2012</span>
-											<p class="chocolat-parent" data-chocolat-title="PSP & coffee dates">
+											<p class="chocolat-parent" data-chocolat-title="From work to cafe runs">
 												<!-- Image -->
 												<a href="images/our-story/1-PSP&CoffeeDates/DSC00076.JPG" class="chocolat-image" title=""><img src="images/our-story/1-PSP&CoffeeDates/DSC00076.JPG" data-original="images/our-story/1-PSP&CoffeeDates/DSC00076.JPG" /></a>
 												<!-- Image -->
@@ -96,9 +97,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Will you go out with me?</h2>
+											<h2>Between Dates and General Mayhem</h2>
 											<span class="cd-date">Oct 20, 2012</span>
-											<p class="chocolat-parent" data-chocolat-title="Will you go out with me?">
+											<p class="chocolat-parent" data-chocolat-title="Between Dates and General Mayhem">
 												<!-- Image -->
 												<a href="images/our-story/2-DatesandSuch/1120010_10151775223924819_1549113658_o.jpg" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/1120010_10151775223924819_1549113658_o.jpg" data-original="images/our-story/2-DatesandSuch/1120010_10151775223924819_1549113658_o.jpg" /></a>
 												<!-- Image -->
@@ -130,9 +131,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Vroom vroom to Canada</h2>
+											<h2>A Canadian weekend 2013</h2>
 											<span class="cd-date">Apr 15, 2013</span>
-											<p class="chocolat-parent" data-chocolat-title="Vroom vroom to Canada">
+											<p class="chocolat-parent" data-chocolat-title="A Canadian weekend 2013">
 												<!-- Image -->
 												<a href="images/our-story/3-Canada/IMG_1058.JPG" class="chocolat-image" title=""><img src="images/our-story/3-Canada/IMG_1058.JPG" data-original="images/our-story/3-Canada/IMG_1058.JPG" /></a>
 												<!-- Image -->
@@ -146,9 +147,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Will you marry me?</h2>
+											<h2>The proposal</h2>
 											<span class="cd-date">Aug 3, 2014</span>
-											<p class="chocolat-parent" data-chocolat-title="Will you marry me?">
+											<p class="chocolat-parent" data-chocolat-title="The proposal">
 												<!-- Image -->
 												<a href="images/our-story/4-Proposal/DSC01435.jpg" class="chocolat-image" title=""><img src="images/our-story/4-Proposal/DSC01435.jpg" data-original="images/our-story/4-Proposal/DSC01435.jpg" /></a>
 												<!-- Image -->
@@ -160,9 +161,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>To the land of fire and ice</h2>
+											<h2>To the Land of Ice and Fire 2014</h2>
 											<span class="cd-date">Aug 3 - Aug 10, 2014</span>
-											<p class="chocolat-parent" data-chocolat-title="To the land of fire and ice">
+											<p class="chocolat-parent" data-chocolat-title="To the Land of Ice and Fire 2014">
 												<!-- Image -->
 												<a href="images/our-story/5-Iceland/DSC01596.JPG" class="chocolat-image" title=""><img src="images/our-story/5-Iceland/DSC01596.JPG" data-original="images/our-story/5-Iceland/DSC01596.JPG" /></a>
 												<!-- Image -->
@@ -182,9 +183,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Celebrating and more fun!</h2>
+											<h2>Celebrating and general shinanigans</h2>
 											<span class="cd-date">Aug 30, 2014</span>
-											<p class="chocolat-parent" data-chocolat-title="Celebrating and more fun!">
+											<p class="chocolat-parent" data-chocolat-title="Celebrating and general shinanigans">
 												<!-- Image -->
 												<a href="images/our-story/6-CelebratingandMoreFun/DSC02586.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC02586.JPG" data-original="images/our-story/6-CelebratingandMoreFun/DSC02586.JPG" /></a>
 												<a href="images/our-story/6-CelebratingandMoreFun/DSC02635.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC02635.JPG" data-original="images/our-story/6-CelebratingandMoreFun/DSC02635.JPG" /></a>
@@ -208,9 +209,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Bier! Und du? </h2>
+											<h2>Deutschland und Bier 2015</h2>
 											<span class="cd-date">Sep 24 - Oct 3, 2015</span>
-											<p class="chocolat-parent" data-chocolat-title="Bier! Und du?">
+											<p class="chocolat-parent" data-chocolat-title="Deutschland und Bier 2015">
 												<!-- Image -->
 												<a href="images/our-story/7-Germany/DSC03908.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC03908.JPG" data-original="images/our-story/7-Germany/DSC03908.JPG" /></a>
 												<!-- Image -->
@@ -238,9 +239,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Good times!</h2>
+											<h2>More fun times to be had</h2>
 											<span class="cd-date">Jan 7, 2016</span>
-											<p class="chocolat-parent" data-chocolat-title="Good times!">
+											<p class="chocolat-parent" data-chocolat-title="More fun times to be had">
 												<!-- Image -->
 												<a href="images/our-story/8-MoreFun/DSC05156.JPG" class="chocolat-image" title=""><img src="images/our-story/8-MoreFun/DSC05156.JPG" data-original="images/our-story/8-MoreFun/DSC05156.JPG" /></a>
 												<!-- Image -->
@@ -256,9 +257,9 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Preparing for the big day</h2>
+											<h2>Preparing for the Big Day</h2>
 											<span class="cd-date">Aug 26, 2016</span>
-											<p class="chocolat-parent" data-chocolat-title="Preparing for the big day">
+											<p class="chocolat-parent" data-chocolat-title="Preparing for the Big Day">
 												<!-- Image -->
 												<a href="images/our-story/9-Preparing/DSC03039.JPG" class="chocolat-image" title=""><img src="images/our-story/9-Preparing/DSC03039.JPG" data-original="images/our-story/9-Preparing/DSC03039.JPG" /></a>
 												<!-- Image -->
@@ -272,8 +273,8 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>... more adventures await</h2>
-											<p class="chocolat-parent" data-chocolat-title="... more adventures await">
+											<h2>... and more adventures await</h2>
+											<p class="chocolat-parent" data-chocolat-title="... and more adventures await">
 												<!-- Image -->
 												<a href="images/our-story/10-MoreAdventuresAwait/DSC01076.JPG" class="chocolat-image" title=""><img src="images/our-story/10-MoreAdventuresAwait/DSC01076.JPG" data-original="images/our-story/10-MoreAdventuresAwait/DSC01076.JPG" /></a>
 										</div> <!-- cd-timeline-content -->
@@ -300,27 +301,32 @@
 								<h2>Ceremony details</h2>
 								<p><img src="images/ceremony-details.svg" alt="Friday, August 26, 2016 - 6 o'clock" class="ceremony-details" /></p>
 							</header>
-							<!--
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-calendar">
+									<h3>General Event Time Line</h3>
+									<p>Ceremony will begin promptly at 6pm, followed by a cocktail "hour". Guests will be asked to move to the reception area for dinner and toasts. Dancing will begin and last until 11pm, at which the groom and the bride will make their (grand) exit!</p>
 								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-users">
+									<h3>Dress Code</h3>
+									<p>Dress Code is Formal, but please be prepared for the summer blaze! Our ceremony and cocktail hour will be on a grassy, tree-covered area so please be mindful of footwear. The reception will be held half outdoors, half indoors with air conditioning, so ladies may prefer to have something to keep themselves warm, just in case. Please also be prepared for some dancing!</p>
+								</li>
+								<li class="icon fa-bed">
+									<h3>Accommodation</h3>
+									<p>For those from out of town who are interested in finding their own accomodation, we suggest searching in the following areas: Seattle, Bellevue, Redmond, Kirkland, Issaquah. There is a variety of hostels, airbnbs, and hotels available.</p>
+								</li>
+								<li class="icon fa-train">
+									<h3>Transportation</h3>
+									<p>Please plan an additional 15-30 minutes to your travel time; Greater Seattle traffic can be quite horrific during rush hour! For those without a car, there is one bus route that will stop 10minutes walking from Salish Lodge - <a href="http://kingcounty.gov/depts/transportation/metro/schedules-maps/208.aspx" target="_blank">Route 208 from Issaquah.</a> In addition to local taxis, we suggest using Lyft or Uber for the most cost effective transport from Seattle to Salish Lodge.</p>
 								</li>
 							</ul>
-							-->
 						</div>
 					</section>
-
 				<!-- Registry -->
 					<section id="registry" class="wrapper style4 registry">
 						<div class="inner">
 							<header>
 								<h2>Gift registry</h2>
-								<p>We are registered at Crate&amp;Barrel and HoneyFund</p>
+								<p>For those of you interested in helping us kick off our married life with some peace of mind and joy, please take a look at our registries! Items from Crate and Barrel can help us purchase some much needed items, while Honeyfund can help us fund our dream honeymoon to Finland!</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="http://www.crateandbarrel.com/gift-registry/annette-seilie-and-kenneth-ishikawa/r5541922" class="button fit special" target="_blank">Crate & Barrel</a></li>
