--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 							<p><img src="images/puffin.svg" alt="Puffin" class="puffin" /><br /><object data="images/title-underline.svg" type="image/svg+xml" class="title-underline"><img src="images/title-underline.png" /></object></p>
 							<h2>Mariko &amp; Kenneth</h2>
 							<p>INVITE YOU TO THEIR WEDDING CELEBRATION</p>
-							<p>AUGUST 26, 2016 | ISSAQUAH, WA</p>
+							<p>AUGUST 26, 2016 | SNOQUALMIE, WA</p>
 						</div>
 						<!--<a href="#one" class="more scrolly">Learn More</a>-->
 					</section>
@@ -304,7 +304,7 @@
 							<ul class="features">
 								<li class="icon fa-calendar">
 									<h3>General Event Time Line</h3>
-									<p>Ceremony will begin promptly at 6pm, followed by a cocktail "hour". Guests will be asked to move to the reception area for dinner and toasts. Dancing will begin and last until 11pm, at which the groom and the bride will make their (grand) exit!</p>
+									<p>Ceremony will begin promptly at 6pm, followed by a cocktail "hour". Guests will be asked to move to the reception area for dinner and toasts. Dancing will begin and last until 11pm, when the groom and the bride will make their (grand) exit!</p>
 								</li>
 								<li class="icon fa-users">
 									<h3>Dress Code</h3>
